--- a/index.html
+++ b/index.html
@@ -639,28 +639,92 @@ sliderImages.forEach(sliderImage => observer.observe(sliderImage));</h5></code><
           <!-- .end .wrap -->
         </section>
 
-
         <section class="bg-apple">
-            <div class="wrap">
-              <div class="content-left">
-                <h3>
-                  Custom cursors
-                </h3>
-              </div>
-              <!-- end .content-left -->
-              <div class="content-left">
-                  <p class="codepen" data-height="500" data-theme-id="0" data-default-tab="result" data-user="avcoder" data-slug-hash="bJNvOO" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Creating Custom Cursors">
-                      <span>See the Pen <a href="https://codepen.io/avcoder/pen/bJNvOO/">
-                      Creating Custom Cursors</a> by A.V. (<a href="https://codepen.io/avcoder">@avcoder</a>)
-                      on <a href="https://codepen.io">CodePen</a>.</span>
-                    </p>
-                    <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-              </div>
-              <!-- end .content-left -->
+          <div class="wrap">
+            <div class="content-left">
+              <h3>
+                Custom cursors
+              </h3>
             </div>
-            <!-- .end .wrap -->
-          </section>
+            <!-- end .content-left -->
+            <div class="content-left">
+              <p
+                class="codepen"
+                data-height="500"
+                data-theme-id="0"
+                data-default-tab="result"
+                data-user="avcoder"
+                data-slug-hash="bJNvOO"
+                style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
+                data-pen-title="Creating Custom Cursors"
+              >
+                <span
+                  >See the Pen
+                  <a href="https://codepen.io/avcoder/pen/bJNvOO/">
+                    Creating Custom Cursors</a
+                  >
+                  by A.V. (<a href="https://codepen.io/avcoder">@avcoder</a>) on
+                  <a href="https://codepen.io">CodePen</a>.</span
+                >
+              </p>
+              <script
+                async
+                src="https://static.codepen.io/assets/embed/ei.js"
+              ></script>
+            </div>
+            <!-- end .content-left -->
+          </div>
+          <!-- .end .wrap -->
+        </section>
 
+        <section class="bg-purple aligncenter">
+          <div class="wrap zoomIn">
+            <h1>
+              Goto: kahoot.it
+            </h1>
+          </div>
+          <!-- .end .wrap -->
+        </section>
+
+        <section class="bg-secondary">
+          <!--.wrap = container (width: 90%) -->
+          <div class="wrap size-50 frame">
+            <h2 class="text-serif aligncenter">
+              Do in-class Exercise 14
+              <br />until end of class
+            </h2>
+            <p class="aligncenter">
+              <a href="http://avillaruz.computerstudi.es/comp2105/index.html"
+                >Start timer</a
+              >
+            </p>
+            <p class="text-symbols">* * *</p>
+            <h4>More Stuff</h4>
+
+            <ul>
+              <li>
+                <a href="https://websitesetup.org/html5-periodical-table/"
+                  >HTML5 Periodic Table</a
+                >
+              </li>
+              <li>
+                <a
+                  style="text-decoration:underline"
+                  href="https://matthewstrom.com/writing/variable-fonts.html"
+                  >Switching to variable fonts</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://aneventapart.com/news/post/fit-for-purpose-making-sense-of-the-new-css-by-eric-meyer"
+                  style="text-decoration:underline;"
+                  >“Fit For Purpose: Making Sense of the New CSS” by Eric
+                  Meyer</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
 
         <section>
           <!-- .wrap = container (width: 90%) -->
